--- a/templates/get/index.html
+++ b/templates/get/index.html
@@ -128,7 +128,7 @@
     <aside id="left_side">
 <div class="block">
 {% if get_id %}
-    <h1>Top torrents</h1>
+<h1>Top torrents for {{ ip }}</h1>
     <ul id="top">
         {% for id in get_id %}
         <li>
